k8s/namespaces/base/home-system/zigbee2mqtt/poe-controller/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zigbee2mqtt
  namespace: home-system
spec:
  hosts:
    - 'z2m.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: zigbee2mqtt.home-system.svc.cluster.local
          weight: 100
